tests/baselines/reference/expressionWithJSDocTypeArguments.errors.txt
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(9,21): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(10,20): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(11,21): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(12,23): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(12,24): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(14,28): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(15,27): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(16,28): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(17,30): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(17,31): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(19,21): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(20,20): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(21,21): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(22,23): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(22,24): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(24,28): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(25,27): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(26,28): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(27,30): error TS8020: JSDoc types can only be used inside documentation comments.
tests/cases/compiler/expressionWithJSDocTypeArguments.ts(27,31): error TS8020: JSDoc types can only be used inside documentation comments.


==== tests/cases/compiler/expressionWithJSDocTypeArguments.ts (20 errors) ====
    // Repro from #51802
    
    function foo<T>(x: T): T { return x }
    
    class Bar<T> { constructor(public x: T) { } }
    
    // Errors expected on all of the following
    
    const WhatFoo = foo<?>;
                        ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const HuhFoo = foo<string?>;
                       ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const NopeFoo = foo<?string>;
                        ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const ComeOnFoo = foo<?string?>;
                          ~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                           ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
    type TWhatFoo = typeof foo<?>;
                               ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type THuhFoo = typeof foo<string?>;
                              ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type TNopeFoo = typeof foo<?string>;
                               ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type TComeOnFoo = typeof foo<?string?>;
                                 ~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                                  ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
    const WhatBar = Bar<?>;
                        ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const HuhBar = Bar<string?>;
                       ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const NopeBar = Bar<?string>;
                        ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    const ComeOnBar = Bar<?string?>;
                          ~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                           ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    
    type TWhatBar = typeof Bar<?>;
                               ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type THuhBar = typeof Bar<string?>;
                              ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type TNopeBar = typeof Bar<?string>;
                               ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    type TComeOnBar = typeof Bar<?string?>;
                                 ~~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
                                  ~~~~~~~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
    